...

                    <EditText
                        android:id="@+id/editTextEventTitle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
...

                    <EditText
                        android:id="@+id/editTextPrice"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
...

                    <EditText
                        android:id="@+id/editTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
...

                        <EditText
                            android:id="@+id/editTextLocation"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
...

                            <EditText
                                android:id="@+id/eventStartDateTime"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                            <EditText
                                android:id="@+id/eventEndDateTime"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                            <EditText
                                android:id="@+id/registrationStartDateTime"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                            <EditText
                                android:id="@+id/registrationEndDateTime"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                    <EditText
                        android:id="@+id/drawDateTime"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
...

                    <EditText
                        android:id="@+id/Capacity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
...

                    <EditText
                        android:id="@+id/WaitingList"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
...
            <!-- Upload -->
            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="46dp"
...
            <!-- Create -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/createButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
...
