...
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textCapacity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="50"
                                android:textColor="#374151"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
...
